--- a/css/global.css
+++ b/css/global.css
@@ -20,15 +20,15 @@ body p {
 	text-align: center;
 }
 body a {
-	color: #66dcef;
+	color: #ef66ef;
 	text-decoration: none;
 }
 body a:hover {
 	color: #21e935;
-	text-decoration: none;
+	text-decoration: underline;
 }
 body a:visited {
-	color: #66dcef;
+	color: #ef66ef;
 	text-decoration: none;
 }
 
@@ -67,10 +67,13 @@ hr.dash {
 }
 
 .title {
-	color: #7ef4de;
+	color: #66ddff;
 	font-size: 1.42em;
 	font-weight: 500;
 	text-align: center;
+}
+.title a:hover {
+	color: #ededff;
 }
 
 .illustration {
