hr color update

--- a/css/global.css
+++ b/css/global.css
@@ -59,7 +59,7 @@ header img {
 
 hr.dash {
 	border: 0;
-	border-bottom: 1px dashed #66cdef;
+	border-bottom: 1px dashed #66ddff;
 	height: 0;
 	margin: 0 auto;
 	text-align: center;
